--- a/slides/_fstrings_magic_config.qmd
+++ b/slides/_fstrings_magic_config.qmd
@@ -43,6 +43,7 @@ A few naming tips and conventions:
 - One word per concept e.g. choose one of `put`, `insert`, `add` in the same code base
 - Use names that can be searched
 - Describe content rather than storage type
+- Naming booleans, use prefixes like 'is', 'has' or 'can' and avoid negations like `not_green`
 - Plurals to indicate groups, e.g. a list of dog objects would be `dogs`, not `dog_list`
 - Keep it simple and use technical terms where appropriate
 - Use explaining variables
