Update frontmatter to include all presenters and link to ICCS fork.

--- a/slides/python.qmd
+++ b/slides/python.qmd
@@ -1,5 +1,7 @@
 ---
-title: "Powering up python"
+title: "RSE Skills"
+subtitle: "(in Python)"
+
 format:
   revealjs:
     embed-resources: true
@@ -14,11 +16,25 @@ format:
     theme: [dark, custom.scss]
 revealjs-plugins:
   - attribution
+
 authors:
   - name: Jack Atkinson
     orcid: 0000-0001-5001-4812
-    affiliations: Senior Research Software Engineer <br> ICCS - University of Cambridge
-date: "2024-01-23"
+    affiliations:
+      - ref: iccs
+  - name: Amy Pike
+    orcid: 0000-0001-5001-4812
+    affiliations:
+      - ref: iccs
+  - name: Marion Weinzierl
+    orcid: 0000-0002-2302-5476
+    affiliations:
+      - ref: iccs
+affiliations:
+  - id: iccs
+    name: ICCS RSE Team <br> University of Cambridge
+
+date: "2024-07-11"
 bibliography: references.bib
 ---
 
@@ -28,17 +44,18 @@ bibliography: references.bib
 ::: {.column width="50%"}
 #### Slides and Materials
 
+<!--
 To access links or follow on your own device these slides can be found at:  
 [https://jackatkinson.net/slides](https://jackatkinson.net/slides)
 
 \
+-->
 
 All materials are available at:
 
 ::: {.column style="font-size: 95%;"}
 
-- [gitlab.com/jatkinson1000/power-up-python](https://gitlab.com/jatkinson1000/power-up-python)
-- [github.com/jatkinson1000/power-up-python](https://github.com/jatkinson1000/power-up-python)
+- [github.com/Cambridge-ICCS/rse-skills-python](https://github.com/Cambridge-ICCS/rse-skills-python)
 :::
 :::
 ::: {.column width="50%"}
@@ -62,28 +79,12 @@ used under [CC0(1.0)](https://creativecommons.org/publicdomain/zero/1.0/deed.en)
 - Be nice ([Python code of conduct](https://www.python.org/psf/conduct/))
 - Ask questions whenever they arise.
   - Someone else is probably wondering the same thing.
-- I will make mistakes.
+- We will make mistakes.
   - Not all of them will be intentional.
 :::
 ::::
 
-
-## whoami {.smaller}
-
-Research background in fluid mechanics and atmosphere:
-
-- Numerics and fluid mechanics in Engineering,
-- Cloud microphysics & volcanic plumes in Geography,
-- Radiation belts and satellite data at BAS.
-
-Now a Research Software Engineer (RSE) at the Institute of Computing for Climate
-Science (ICCS) working with various 
-
-This talk can be summarised as _"things I wish I'd known sooner."_
-
-::: {.notes}
-My background in this is domain science and numerical modelling on HPC.
-:::
+<!-- ------------------------------------------------------------------------------ -->
 
 {{< include _rse.qmd >}}
 
