add info about readme, other files in the repo, and licenses

--- a/slides/_comments_docstrings.qmd
+++ b/slides/_comments_docstrings.qmd
@@ -299,3 +299,18 @@ Docstrings:
  - Authors and Acknowledgement
  - Licence
  - Known Issues
+ 
+## Other potential files in your repository {.smaller}
+ 
+ - LICENSE
+ - CONTRIBUTING.md
+ - CITATION.cff
+ - CODE_OF_CONDUCT.md
+ - CHANGES.md
+
+
+
+
+
+
+
