--- a/slides/_comments_docstrings.qmd
+++ b/slides/_comments_docstrings.qmd
@@ -285,6 +285,9 @@ Docstrings:
    - who built/is building this
    - how to contribute
    - how to reuse
+- Usually written in Markdown
+- See also, e.g., [https://www.makeareadme.com/](https://www.makeareadme.com/) and [https://readme.so/](https://readme.so/)
+   
 
 ## Recommended README Content {.smaller}
 
