--- a/slides/python.qmd
+++ b/slides/python.qmd
@@ -269,6 +269,7 @@ Get in touch:
 
 {{< fa brands github >}} \ [MarionBWeinzierl](https://github.com/MarionBWeinzierl)
 
+{{< fa brands mastodon >}} \ [\@MarionBWeinzierl\@mast.hpc.social](https://mast.hpc.social/@MarionBWeinzierl)
 :::
 ::::
 
