Add Mastodon for @ MarionBWeinzierl
Co-authored-by: Marion <56403724+MarionBWeinzierl@users.noreply.github.com>

--- a/slides/python.qmd
+++ b/slides/python.qmd
@@ -248,6 +248,7 @@ Get in touch:
 
 {{< fa brands github >}} \ [MarionBWeinzierl](https://github.com/MarionBWeinzierl)
 
+{{< fa brands mastodon >}} \ [\@MarionBWeinzierl\@mast.hpc.social](https://mast.hpc.social/@MarionBWeinzierl)
 :::
 ::::
 
