include the naming slides in the main quarto file

--- a/slides/python.qmd
+++ b/slides/python.qmd
@@ -97,6 +97,10 @@ My background in this is domain science and numerical modelling on HPC.
 
 <!-- ------------------------------------------------------------------------------ -->
 
+{{< include _naming_for_clarity.qmd >}}
+
+<!-- ------------------------------------------------------------------------------ -->
+
 {{< include _comments_docstrings.qmd >}}
 
 <!-- ------------------------------------------------------------------------------ -->
