reformatting and splitting black and pylint sections

--- a/slides/_naming_for_clarity.qmd
+++ b/slides/_naming_for_clarity.qmd
@@ -1,4 +1,4 @@
-## Naming For Clarity
+## Naming For Clarity {.smaller}
 
 It may seem inconsequential, but carefully naming variables and methods can improve the
 readability of code massively and can help to make code self documenting.
