--- a/slides/python.qmd
+++ b/slides/python.qmd
@@ -93,7 +93,7 @@ My background in this is domain science and numerical modelling on HPC.
 
 <!-- ------------------------------------------------------------------------------ -->
 
-{{< include _formatting.qmd >}}
+{{< include _formatting_with_black.qmd >}}
 
 <!-- ------------------------------------------------------------------------------ -->
 
@@ -101,6 +101,9 @@ My background in this is domain science and numerical modelling on HPC.
 
 <!-- ------------------------------------------------------------------------------ -->
 
+{{< include _formatting_with_pylint.qmd >}}
+
+<!-- ------------------------------------------------------------------------------ -->
 {{< include _comments_docstrings.qmd >}}
 
 <!-- ------------------------------------------------------------------------------ -->
