removed some slides and implemented other changes from dry run

--- a/slides/python.qmd
+++ b/slides/python.qmd
@@ -130,8 +130,7 @@ Beyond the scope of today are a few other honourable mentions:
   - Adding type hinting to python code - how and why?
   - Type checking with mypy
 
-These lessons will be added to the course content in future but are beyond the scope
-of today.
+These lessons are beyond the scope of today.
 
 <!-- ------------------------------------------------------------------------------ 
 
@@ -245,14 +244,6 @@ Get in touch:
 {{< fa brands mastodon >}} \ [\@jatkinson1000\@fosstodon.org](https://fosstodon.org/@jatkinson1000)
 :::
 ::: {.column width="35%"}
-{{< fa pencil >}} \ Amy Pike
-
-{{< fa solid envelope >}} \ [ap766[AT]cam.ac.uk](mailto:ap766@cam.ac.uk)
-
-{{< fa brands github >}} \ [AmyOctoCat](https://github.com/AmyOctoCat)
-
-\
-
 {{< fa pencil >}} \ Marion Weinzierl
 
 {{< fa solid envelope >}} \ [mw925[AT]cam.ac.uk](mailto:mw925@cam.ac.uk)
@@ -260,6 +251,14 @@ Get in touch:
 {{< fa brands github >}} \ [MarionBWeinzierl](https://github.com/MarionBWeinzierl)
 
 {{< fa brands mastodon >}} \ [\@MarionBWeinzierl\@mast.hpc.social](https://mast.hpc.social/@MarionBWeinzierl)
+
+\
+{{< fa pencil >}} \ Amy Pike
+
+{{< fa solid envelope >}} \ [ap766[AT]cam.ac.uk](mailto:ap766@cam.ac.uk)
+
+{{< fa brands github >}} \ [AmyOctoCat](https://github.com/AmyOctoCat)
+
 :::
 ::::
 
