--- a/slides/_comments_docstrings.qmd
+++ b/slides/_comments_docstrings.qmd
@@ -77,7 +77,7 @@ quotes: `"""..."""`.
   Unlike comments, docstrings follow a set format.
 
 Various formatting options exist: numpy, Google, reST, etc.\
-We will use numpydoc it is readable and widely used in scientific code.\
+We will use numpydoc as it is readable and widely used in scientific code.\
 Full guidance for [numpydoc is available](https://numpydoc.readthedocs.io/en/latest/format.html).
 
 
@@ -267,7 +267,7 @@ Go to exercise 5 and examine the comments:
 Docstrings:
 
 - Work through the file adding docstrings where they are missing.
-- If you are unsure about variable types or meanings at any point you can sneak a look ahead to the code in exercise 5.
+- If you are unsure about variable types or meanings at any point you can sneak a look ahead to the code in exercise 6.
 
 
 ## READMEs {.smaller}
