Add section on variable naming (#8)
* add slide on naming standards

* add warning about the use of f strings in logging statements

* Adding instructions for naming part of exercise.

* changing some of the naming in the final version of precipitation_climatology.py and making some suggestions for other possible naming changes. Removed use of assert and slight refactor to the convert_pr_units function to add an explaining variable.

* hopefully made more readable

* naming tweeks

* revert changes to pluralise name for array. Not sure what best practice is here.
t Please enter the commit message for your changes. Lines starting

* add a line about boolean naming

* add a line about boolean naming

* formatting

* Update exercises/00_final/precipitation_climatology.py

Co-authored-by: jatkinson1000 <109271713+jatkinson1000@users.noreply.github.com>

* fix excpetion raising bug introduced in this branch

* grammar in slide.

Co-authored-by: jatkinson1000 <109271713+jatkinson1000@users.noreply.github.com>

* pull naming into it's own section

* return matplotlib import to the standard plt and add small fix

* further renaming and some additional documentation

* further renaming

* further naming changes

* further naming changes

* revert naming of columns in the netcdf as editing netcdf file is too lengthy for this iteration

* remove comment as have confirmed that this hasn't introduced a runtime error

* add some examples into the slides

* add to example slide

* finish renaming in exercise 5

* renumber exercises

* include the naming slides in the main quarto file

* add base code for exercise on naming

* update naming in exercise 4

* update exercise 4 for renaming

* run black in all the exercises after black

* modified the wrong exercise

* missed file naming

* renumber exercises in slides and a dd a bit of extra detail

* reformatting and splitting black and pylint sections

* Updat

--- a/slides/python.qmd
+++ b/slides/python.qmd
@@ -93,10 +93,17 @@ My background in this is domain science and numerical modelling on HPC.
 
 <!-- ------------------------------------------------------------------------------ -->
 
-{{< include _formatting.qmd >}}
+{{< include _formatting_with_black.qmd >}}
 
 <!-- ------------------------------------------------------------------------------ -->
 
+{{< include _naming_for_clarity.qmd >}}
+
+<!-- ------------------------------------------------------------------------------ -->
+
+{{< include _formatting_with_pylint.qmd >}}
+
+<!-- ------------------------------------------------------------------------------ -->
 {{< include _comments_docstrings.qmd >}}
 
 <!-- ------------------------------------------------------------------------------ -->
