--- a/slides/_rse.qmd
+++ b/slides/_rse.qmd
@@ -6,8 +6,8 @@
 ::: {.fragment .fade-in}
 Major Computational Programs  
 
-::: {layout="[-10, 28, -5, 28, -10]" layout-valign="center"}
-![]( https://live.staticflickr.com/8571/16376102935_a638e8f2f1_k.jpg )
+::: {layout="[-10, 22, -5, 28, -10]" layout-valign="center"}
+![]( https://www.nsf.gov/news/mmg/media/images/easm1_h.jpg )
 
 ![]( https://www.hpc.cam.ac.uk/sites/default/files/inline-images/image_0.jpeg )
 :::
@@ -41,11 +41,11 @@ Experiment support
 
 
 ::: {.attribution}
-Bathymetry by NOAA under public domain  
-CTD Bottles by WHOI under public domain  
-Keeling Curve by Scripps under public domain  
-Climate simulation by [Los Alamos National Laboratory](https://www.flickr.com/photos/losalamosnatlab/16376102935/in/photostream/) under [CC BY-NC-ND](https://creativecommons.org/licenses/by-nc-nd/2.0/)  
-Dawn HPC by Joe Bishop with permission  
+Bathymetry by NOAA under public domain
+CTD Bottles by WHOI under public domain\
+Keeling Curve by Scripps under public domain\
+Dawn HPC by Joe Bishop with permission\
+Climate simulation by NSF under public domain\
 :::
 
 
@@ -60,6 +60,36 @@ Dawn HPC by Joe Bishop with permission
 
 ## Why does this matter? {.smaller}
 ![](images/Retractions.png){.absolute top=12.5% right=15% width=70%}
+
+
+## Why does this matter? {.smaller}
+
+More widely than publishing papers, code is used in control and decision making:
+
+:::: {.columns}
+::: {.column width="60%"}
+\
+
+- Weather forecasting
+- Climate policy
+- Disease modelling (e.g. Covid)
+- Satellites and spacecraft[^*]
+- Medical Equipment
+
+\
+
+Your code (or its derivatives) may well move from research to operational one day.
+
+:::
+::::
+
+![](images/margaret_hamilton_nasa.jpg){.absolute top=20% right=0% width=35%}
+
+[^*]: If possible to be even more awesome, it was MH [who first coined the term _"Software Engineering"_](https://www.computer.org/publications/tech-news/events/what-to-know-about-the-scientist-who-invented-the-term-software-engineering).]
+
+::: {.attribution}
+Margaret Hamilton and the Apollo XI by NASA under public domain  
+:::
 
 
 ## Why does this matter?^[For more details I highly recommend the [Writing Clean Scientific Software](https://www.youtube.com/watch?v=Q6Ksu_uX3bc) Webinar [@Murphy_2023]] {.smaller}
