Update slides with attribution formatting and aesthetics.

--- a/slides/python.qmd
+++ b/slides/python.qmd
@@ -145,8 +145,7 @@ Beyond the scope of today are a few other honourable mentions:
   - Adding type hinting to python code - how and why?
   - Type checking with mypy
 
-These lessons will be added to the course content in future but are beyond the scope
-of today.
+These lessons are beyond the scope of today.
 
 <!-- ------------------------------------------------------------------------------ 
 
@@ -243,12 +242,11 @@ an ICCS Climate Code Clinic:
 - RSE slack workspace
 :::
 
-\
-
-::: {.column width="20%"}
+::: {.column style="width:20%; font-size: 85%;"}
 Get in touch:
 :::
-::: {.column width="45%"}
+
+::: {.column style="width: 40%; font-size: 85%;"}
 {{< fa pencil >}} \ Jack Atkinson
 
 {{< fa solid globe >}} \ [jackatkinson.net](https://jackatkinson.net)
@@ -259,15 +257,8 @@ Get in touch:
 
 {{< fa brands mastodon >}} \ [\@jatkinson1000\@fosstodon.org](https://fosstodon.org/@jatkinson1000)
 :::
-::: {.column width="35%"}
-{{< fa pencil >}} \ Amy Pike
 
-{{< fa solid envelope >}} \ [ap766[AT]cam.ac.uk](mailto:ap766@cam.ac.uk)
-
-{{< fa brands github >}} \ [AmyOctoCat](https://github.com/AmyOctoCat)
-
-\
-
+::: {.column style="width: 40%; font-size: 85%;"}
 {{< fa pencil >}} \ Marion Weinzierl
 
 {{< fa solid envelope >}} \ [mw925[AT]cam.ac.uk](mailto:mw925@cam.ac.uk)
@@ -275,7 +266,16 @@ Get in touch:
 {{< fa brands github >}} \ [MarionBWeinzierl](https://github.com/MarionBWeinzierl)
 
 {{< fa brands mastodon >}} \ [\@MarionBWeinzierl\@mast.hpc.social](https://mast.hpc.social/@MarionBWeinzierl)
+
+\
+
+{{< fa pencil >}} \ Amy Pike
+
+{{< fa solid envelope >}} \ [ap766[AT]cam.ac.uk](mailto:ap766@cam.ac.uk)
+
+{{< fa brands github >}} \ [AmyOctoCat](https://github.com/AmyOctoCat)
 :::
+
 ::::
 
 
