Update to text including addressing comments from @AmyOctoCat and @MarionBWeinzierl

--- a/JOSE_paper/paper.bib
+++ b/JOSE_paper/paper.bib
@@ -47,3 +47,11 @@ url = {https://github.com/quarto-dev/quarto-cli},
 version = {1.2},
 year = {2022}
 }
+
+@inproceedings{rubin2013effectiveness,
+  title={The effectiveness of live-coding to teach introductory programming},
+  author={Rubin, Marc J},
+  booktitle={Proceeding of the 44th ACM technical symposium on Computer science education},
+  pages={651--656},
+  year={2013}
+}
