--- a/slides/rse-skills.qmd
+++ b/slides/rse-skills.qmd
@@ -125,7 +125,12 @@ My background in this is domain science and numerical modelling on HPC.
 {{< include _formatting_with_pylint.qmd >}}
 
 <!-- ------------------------------------------------------------------------------ -->
+
 {{< include _comments_docstrings.qmd >}}
+
+<!-- ------------------------------------------------------------------------------ -->
+
+{{< include _readme_license.qmd >}}
 
 <!-- ------------------------------------------------------------------------------ -->
 
